@@ -5,17 +5,19 @@ ASSIMULO
 README
 =======
 
-Assimulo is a Python based simulation package that allows for simulation of both 
-ordinary differential equations of the form f(t,y), (explicit problems) and 
-differential algebraic equations of the form f(t,y,yd), (implicit problems). 
-Assimulo currently supports Explicit Euler, adaptive Runge-Kutta of order 4 
-and Runge-Kutta of order 4. It also wraps the popular SUNDIALS 
+Assimulo is a Cython/Python based simulation package that allows for 
+simulation of both ordinary differential equations of the form f(t,y), 
+(explicit problems) and differential algebraic equations of the form 
+f(t,y,yd), (implicit problems). Assimulo currently supports Explicit 
+Euler, adaptive Runge-Kutta of order 4 and Runge-Kutta of order 4. It 
+also wraps the popular SUNDIALS 
 (https://computation.llnl.gov/casc/sundials/main.html) solvers CVode 
-(for explicit problems) and IDA (for implicit problems). A Python version of 
-Ernst Hairer's code (http://www.unige.ch/~hairer/software.html) Radau5 is also available. 
-CVode and IDA supports discontinuous systems of the form f(t,y,sw) and f(t,y,yd,sw) with
-event(root)-functions defined as g(t,y,sw) and g(t,y,yd,sw) where
-sw should be fixed during the integration.
+(for explicit problems) and IDA (for implicit problems). Hairer's 
+(http://www.unige.ch/~hairer/software.html) codes Radau5, Rodas and 
+Dopri5 is also available. CVode and IDA supports discontinuous systems 
+of the form f(t,y,sw) and f(t,y,yd,sw) with event(root)-functions 
+defined as g(t,y,sw) and g(t,y,yd,sw) where sw should be fixed during 
+the integration.
 
 The package comes with a Problem specifications class and subclasses corresponding 
 to the different problem, Implicit_Problem and Explicit_Problem. To define and 
